[package]
name = "slint_rs"
version = "0.1.0"
edition = "2024"


[dependencies]
slint = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15.3"
clipboard-win = "5.4.0"
base64 = "0.22.1"
image = "0.25.5"
svg = "0.18.0"

[build-dependencies]
slint-build = "1.10.0"
